# taroni-cli

./: .env  .session_data.json  README.md  TARONI.md  chat_history.json  pyproject.toml
.cursor/commands/: gemini-api.md  installmd.md  searchgoogle.md  xapi.md
taroni/: api_key_manager.py  cli.py  handlers copy.py  handlers.py  main.py  test.py  tools.py  utils.py
taroni/qa/: qa01.txt
taroni_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
