# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taroni-cli"
version = "0.8.0" # 階層的設定ファイルの導入
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A highly customizable and intelligent CLI assistant for the Google GenAI SDK"
requires-python = ">=3.9"
dependencies = [
    "google-genai",
    "python-dotenv",
    "tzdata",
    "httpx",
    "prompt-toolkit",
]

[project.scripts]
taroni = "taroni.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["taroni"]